--- a/index.html
+++ b/index.html
@@ -3,66 +3,81 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles</title>
+<title>12 Bubbles - Halloween</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  background-image: radial-gradient(circle at 30% 30%, #0ff1 10%, transparent 60%),
-                    radial-gradient(circle at 70% 70%, #ff00ff1a 10%, transparent 60%),
+  background-image: radial-gradient(circle at 30% 30%, #ff66001a 10%, transparent 60%),
+                    radial-gradient(circle at 70% 70%, #ff99001a 10%, transparent 60%),
                     linear-gradient(180deg, #000 0%, #111 100%);
-  color:#0ff;
+  color:#ff6600;
 }
 
+/* --- LOADING SCREEN --- */
+#loadingScreen {
+  position: fixed; top:0; left:0; width:100%; height:100%;
+  background:#000; display:flex; justify-content:center; align-items:center;
+  color:#ff6600; font-size:50px; font-weight:bold; z-index:3000;
+  text-shadow: 0 0 20px #ff9900, 0 0 40px #ff6600, 0 0 60px #ff3300;
+  animation:flashLoading 3.55s ease-in-out forwards;
+}
+@keyframes flashLoading {
+  0%, 100% { text-shadow: 0 0 20px #ff9900,0 0 40px #ff6600,0 0 60px #ff3300; }
+  25%, 75% { text-shadow: 0 0 60px #ff9900,0 0 100px #ff6600,0 0 140px #ff3300; }
+}
+
+/* --- HOME SCREEN --- */
 #startBtn, #indexBtn {
-  display:block; margin:0 auto;
+  display:none; margin:0 auto;
   font-size:28px; padding:15px 35px;
-  background: linear-gradient(45deg,#00ffff,#00ff99,#ff00ff);
+  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
   border:none; border-radius:12px; color:white;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 20px #0ff,0 0 40px #0ff,0 0 60px #0ff;
+  cursor:pointer; box-shadow:0 0 20px #ff6600,0 0 40px #ff6600,0 0 60px #ff3300;
   z-index:1000;
 }
-
-#startBtn { margin-top:30vh; } /* center home screen for mobile */
+#startBtn { margin-top:30vh; }
 #indexBtn { margin-top:20px; }
 
+/* --- Countdown & Score --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#0ff;
-  text-shadow:0 0 20px #0ff,0 0 40px #0ff;
+  font-size:80px; color:#ff6600;
+  text-shadow:0 0 20px #ff6600,0 0 40px #ff9900;
   z-index:1001; display:none;
 }
-
 #scoreContainer {
   position:fixed; top:20px; left:50%;
   transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#0ff; }
+#score { font-size:28px; color:#ff6600; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
+/* --- Bubbles --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-size:24px; font-weight:bold; color:#fff;
-  background:linear-gradient(135deg,#00ffff,#ff00ff);
-  border:2px solid #0ff; box-shadow:0 0 15px #0ff,0 0 30px #0ff inset;
+  background:linear-gradient(135deg,#ff6600,#ff9900);
+  border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
   position:absolute; cursor:pointer;
 }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
 .bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
 .bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
-.bubble.gravity { background: linear-gradient(135deg,#00ffff,#ff0); color:#000; font-size:28px; box-shadow:0 0 25px #0ff,0 0 50px #ff0 inset; }
+.bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset; }
 
+/* --- Index Panel --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #0ff;
+  z-index:999; box-shadow:0 -5px 30px #ff6600;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
@@ -73,32 +88,34 @@ html, body {
 .indexItem .bubbleImg {
   width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #0ff;
-  box-shadow:0 0 15px #0ff inset; animation:float 1s infinite alternate;
+  font-weight:bold; color:#fff; border:2px solid #ff6600;
+  box-shadow:0 0 15px #ff6600 inset; animation:float 1s infinite alternate;
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
-
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
+/* --- End Screen --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#0ff; font-size:40px;
+  justify-content:center; align-items:center; color:#ff6600; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
   margin-top:30px; font-size:26px; padding:15px 40px;
   border:none; border-radius:10px; cursor:pointer; color:white;
-  background: linear-gradient(45deg,#00ffff,#00ff99,#ff00ff);
-  box-shadow:0 0 20px #0ff,0 0 40px #0ff;
+  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
+  box-shadow:0 0 20px #ff6600,0 0 40px #ff6600;
 }
 
+/* --- Version --- */
 #versionLabel {
   position:fixed; top:10px; right:10px; font-size:16px;
   color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
 }
 
+/* --- Easter Egg --- */
 #easterEgg {
   position: fixed; top: 0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); color:red; font-size:150px;
@@ -123,8 +140,8 @@ html, body {
 </head>
 <body>
 
-<div id="versionLabel">Released 1.12.0</div>
-
+<div id="loadingScreen">Level 12 studio</div>
+<div id="versionLabel">Released 1.0.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
@@ -135,7 +152,7 @@ html, body {
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
   <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ffff,#ff0); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -170,48 +187,58 @@ const continueBtn=document.getElementById('continueBtn');
 const versionLabel=document.getElementById('versionLabel');
 const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
+const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-startBtn.addEventListener('click',startCountdown);
+// --- LOADING SCREEN ---
+window.addEventListener('load',()=>{
+  setTimeout(()=>{
+    loadingScreen.style.display='none';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+    attachButtonEvents();
+  },3550);
+});
 
-indexBtn.addEventListener('click',(e)=>{
-  e.stopPropagation();
-  if(indexPanel.style.top==='30%'){
+// --- BUTTON LOGIC ---
+function attachButtonEvents(){
+  startBtn.addEventListener('click',startCountdown);
+  indexBtn.addEventListener('click',(e)=>{
+    e.stopPropagation();
+    if(indexPanel.style.top==='30%'){
+      indexPanel.style.top='100%';
+      startBtn.style.display='block';
+      indexBtn.style.display='block';
+    } else {
+      indexPanel.style.top='30%';
+      startBtn.style.display='none';
+      indexBtn.style.display='none';
+    }
+  });
+  closeBtn.addEventListener('click',(e)=>{
+    e.stopPropagation();
     indexPanel.style.top='100%';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-  } else {
-    indexPanel.style.top='30%';
-    startBtn.style.display='none';
-    indexBtn.style.display='none';
-  }
-});
-
-closeBtn.addEventListener('click',(e)=>{
-  e.stopPropagation();
-  indexPanel.style.top='100%';
-  startBtn.style.display='block';
-  indexBtn.style.display='block';
-});
-
-indexPanel.addEventListener('click',e=>e.stopPropagation());
-
-document.body.addEventListener('click',()=>{
-  if(indexPanel.style.top==='30%'){
-    indexPanel.style.top='100%';
+  });
+  indexPanel.addEventListener('click',e=>e.stopPropagation());
+  document.body.addEventListener('click',()=>{
+    if(indexPanel.style.top==='30%'){
+      indexPanel.style.top='100%';
+      startBtn.style.display='block';
+      indexBtn.style.display='block';
+    }
+  });
+  continueBtn.addEventListener('click',()=>{
+    endScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
-  }
-});
+    versionLabel.style.display='block';
+  });
+}
 
-continueBtn.addEventListener('click',()=>{
-  endScreen.style.display='none';
-  startBtn.style.display='block';
-  indexBtn.style.display='block';
-  versionLabel.style.display='block';
-});
-
+// --- Countdown ---
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -231,6 +258,7 @@ function startCountdown(){
   },1000);
 }
 
+// --- GAME LOGIC ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -332,8 +360,6 @@ function updateBubbles(){
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
-
-  // Easter egg
   if(score===12 || score<=3){
     easterEl.textContent = (score===12?'12':'BRUH');
     easterEl.style.display='flex';
@@ -348,7 +374,6 @@ function showEndScreen(){
   finalScoreText.textContent="Tvé skóre: "+score;
   endScreen.style.display='flex';
 }
-
 </script>
 </body>
 </html>
