--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@ html, body {
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#ff6600; font-size:50px; font-weight:bold; z-index:3000;
-  text-shadow: 0 0 20px #ff9900, 0 0 40px #ff6600, 0 0 60px #ff3300;
-  animation:flashLoading 3.55s ease-in-out forwards;
+  color:#ff6600; font-size:12vw; font-weight:bold; z-index:3000;
+  text-align:center;
+  animation:glowPulse 3.5s forwards;
 }
-@keyframes flashLoading {
-  0%, 100% { text-shadow: 0 0 20px #ff9900,0 0 40px #ff6600,0 0 60px #ff3300; }
-  25%, 75% { text-shadow: 0 0 60px #ff9900,0 0 100px #ff6600,0 0 140px #ff3300; }
+@keyframes glowPulse {
+  0% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
+  50% { text-shadow:0 0 20px #ff6600, 0 0 40px #ff9900, 0 0 60px #ffcc00; opacity:1; }
+  100% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
 }
 
 /* --- HOME SCREEN --- */
@@ -93,6 +94,7 @@ html, body {
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
+
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
 /* --- End Screen --- */
@@ -141,7 +143,8 @@ html, body {
 <body>
 
 <div id="loadingScreen">Level 12 studio</div>
-<div id="versionLabel">Released 1.1.0</div>
+
+<div id="versionLabel">Released 1.0.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
@@ -266,6 +269,7 @@ function startGame(){
   requestAnimationFrame(updateBubbles);
 }
 
+// --- Bubble spawning ---
 function spawnBubble(){
   if(!gameRunning) return;
   const elapsed=(Date.now()-startTime)/1000;
@@ -357,6 +361,7 @@ function updateBubbles(){
   requestAnimationFrame(updateBubbles);
 }
 
+// --- END GAME ---
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
@@ -377,3 +382,4 @@ function showEndScreen(){
 </script>
 </body>
 </html>
+
