--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles - Halloween</title>
+<title>12 Bubbles</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
@@ -144,7 +144,7 @@ html, body {
 
 <div id="loadingScreen">Level 12 studio</div>
 
-<div id="versionLabel">Released 1.0.3</div>
+<div id="versionLabel">Released 1.1.0</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
 
