--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles</title>
+<title>12 Bubbles - HALLOWEEN</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
