--- a/index.html
+++ b/index.html
@@ -3,40 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Bubbles - HALLOWEEN</title>
+<title>12 Bubbles</title>
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  background-image: radial-gradient(circle at 30% 30%, #ff66001a 10%, transparent 60%),
-                    radial-gradient(circle at 70% 70%, #ff99001a 10%, transparent 60%),
-                    linear-gradient(180deg, #000 0%, #111 100%);
-  color:#ff6600;
+  color:#fff;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#ff6600; font-size:12vw; font-weight:bold; z-index:3000;
+  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
   text-align:center;
-  animation:glowPulse 3.5s forwards;
+  animation:eyeGlow 2s ease-in-out forwards;
 }
-@keyframes glowPulse {
-  0% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
-  50% { text-shadow:0 0 20px #ff6600, 0 0 40px #ff9900, 0 0 60px #ffcc00; opacity:1; }
-  100% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
+
+@keyframes eyeGlow {
+  0% { opacity:0.2; text-shadow:none; }
+  50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
+  100% { opacity:0.2; text-shadow:none; }
 }
 
 /* --- HOME SCREEN --- */
 #startBtn, #indexBtn {
   display:none; margin:0 auto;
   font-size:28px; padding:15px 35px;
-  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
-  border:none; border-radius:12px; color:white;
+  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
+  border:none; border-radius:12px; color:#fff;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 20px #ff6600,0 0 40px #ff6600,0 0 60px #ff3300;
+  cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
   z-index:1000;
 }
 #startBtn { margin-top:30vh; }
@@ -46,8 +44,8 @@ html, body {
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#ff6600;
-  text-shadow:0 0 20px #ff6600,0 0 40px #ff9900;
+  font-size:80px; color:#d166ff;
+  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
@@ -56,7 +54,7 @@ html, body {
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#ff6600; }
+#score { font-size:28px; color:#d166ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
 /* --- Bubbles --- */
@@ -64,21 +62,21 @@ html, body {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
   font-size:24px; font-weight:bold; color:#fff;
-  background:linear-gradient(135deg,#ff6600,#ff9900);
-  border:2px solid #ff6600; box-shadow:0 0 15px #ff6600,0 0 30px #ff9900 inset;
+  background:linear-gradient(135deg,#a044ff,#6a00f4);
+  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; box-shadow:0 0 20px #ff0,0 0 40px #ff0 inset;}
-.bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; box-shadow:0 0 20px #0f0,0 0 40px #0f0 inset;}
-.bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; box-shadow:0 0 20px #f0f,0 0 40px #f0f inset;}
-.bubble.gravity { background: linear-gradient(135deg,#ff6600,#ffff00); color:#000; font-size:28px; box-shadow:0 0 25px #ff6600,0 0 50px #ffff00 inset; }
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
+.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
+.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
+.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
 
 /* --- Index Panel --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #ff6600;
+  z-index:999; box-shadow:0 -5px 30px #d166ff;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
@@ -89,8 +87,8 @@ html, body {
 .indexItem .bubbleImg {
   width:60px; height:60px; margin-right:15px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #ff6600;
-  box-shadow:0 0 15px #ff6600 inset; animation:float 1s infinite alternate;
+  font-weight:bold; color:#fff; border:2px solid #d166ff;
+  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
 }
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
@@ -101,14 +99,14 @@ html, body {
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#ff6600; font-size:40px;
+  justify-content:center; align-items:center; color:#fff; font-size:40px;
   z-index:1500; text-align:center;
 }
 #continueBtn {
   margin-top:30px; font-size:26px; padding:15px 40px;
-  border:none; border-radius:10px; cursor:pointer; color:white;
-  background: linear-gradient(45deg,#ff6600,#ff9900,#ff3300);
-  box-shadow:0 0 20px #ff6600,0 0 40px #ff6600;
+  border:none; border-radius:10px; cursor:pointer; color:#fff;
+  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
+  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
 
 /* --- Version --- */
@@ -152,17 +150,17 @@ html, body {
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#ff9900); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#00ff00,#00aa00); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff6600,#ffff00); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina teleportuje všechny bubliny k ní</div></div>
 </div>
 
 <div id="countdown"></div>
 <div id="scoreContainer">
-  <div id="highscore">Nejvyšší skóre: 0</div>
-  <div id="score">Skóre: 0</div>
-  <div id="lives">Životy: 3</div>
+  <div id="highscore">Nejvyšší skóre: 100</div>
+  <div id="score">Skóre: 100</div>
+  <div id="lives">Životy: ∞</div>
 </div>
 
 <div id="endScreen">
@@ -201,7 +199,7 @@ window.addEventListener('load',()=>{
     startBtn.style.display='block';
     indexBtn.style.display='block';
     attachButtonEvents();
-  },3550);
+  },2000); // delší efekty zasvícení
 });
 
 // --- BUTTON LOGIC ---
@@ -269,7 +267,6 @@ function startGame(){
   requestAnimationFrame(updateBubbles);
 }
 
-// --- Bubble spawning ---
 function spawnBubble(){
   if(!gameRunning) return;
   const elapsed=(Date.now()-startTime)/1000;
@@ -278,15 +275,15 @@ function spawnBubble(){
   const bubble=document.createElement('div');
   bubble.classList.add('bubble');
 
-  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  if(chance<=1.0000){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
   else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
   else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
   else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
   else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
 
   const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`;
-  bubble.style.height=`${size}px`;
+  bubble.style.width=size+'px';
+  bubble.style.height=size+'px';
   bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -298,7 +295,6 @@ function spawnBubble(){
     if(['2x','144','triple','gravity'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
     bubble.remove();
     bubbles=bubbles.filter(b=>b!==bubble);
-
     if(bubble.dataset.type==="2x") score*=2;
     else if(bubble.dataset.type==="144") score+=144;
     else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
@@ -311,7 +307,6 @@ function spawnBubble(){
       });
     }
     else score++;
-
     if(score>999999999) score=999999999;
     scoreEl.textContent="Skóre: "+score;
     if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
@@ -330,7 +325,7 @@ function spawnSingleBubble(){
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
   const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`; bubble.style.height=`${size}px`;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px';
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -361,7 +356,6 @@ function updateBubbles(){
   requestAnimationFrame(updateBubbles);
 }
 
-// --- END GAME ---
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none';
@@ -382,4 +376,3 @@ function showEndScreen(){
 </script>
 </body>
 </html>
-
