--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ html, body {
 <div id="scoreContainer">
   <div id="highscore">Nejvyšší skóre: 100</div>
   <div id="score">Skóre: 100</div>
-  <div id="lives">Životy: ∞</div>
+  <div id="lives">Životy: 100000</div>
 </div>
 
 <div id="endScreen">
